-Femur fracturer no longer spins faster when super-charged, instead it now starts off with a gray trail effect that turns green when super-charged to serve as a better visual indicator
-Spooky scroll pumpkin heads will now die if they are floating around you for too long without targetting an enemy


Enemy & Boss Changes:

-Switched around big bone's skull wisp attacks, the yellow ones in phase 1 will now directly charge at you, while the orange ones in phase 2 are now flung around randomly
-Big bone's skull wisp projectiles no longer make ghost screaming sounds when they die, and they now produce a gore version of themselves when they die (This will not damage you and is purely visual, and its also kinda funny)
-Changed big bone's rose projectile attack, in phase 1 he will spawn a telegraph at your position and shoot all the roses at that spot, and in phase 2 the telegraph itself and the stream of roses will follow the player
-Big bone's charging speed is now a bit faster overall to make it a bit more difficult
-Big bone's charge attack in phase 2 no longer creates fireballs when he hits a wall, however to compensate his charge attack will now predict your movement in phase 2
-Tweaked and improved the visual effects for many of big bone's projectiles
-Daffodil's thorn ball projectile after-images are now red instead of green
-Added custom sounds for spooky spirit's charging attack and its death sound, both made by Rockwizard5
-Spooky spirit now correctly displays that it is night-time only in its bestiary entry
-Spooky spirit's glowy aura outline and projectiles now have different party-themed colors if you fight him during the raveyard event (This is purely visual, there is no AI changes or new loot)
-Added new telegraph sprites for orro & boro that actually point in the direction of where they will come from, as well as making multiple telegraphs spawn in a line instead of just one to make their attacks more understandable