@@ -107,6 +107,7 @@ Weapons:
 -Femur fracturer homing skulls are now lauched forward in the same direction as the hammer was thrown instead of being created and then moving super slowly
 -Femur fracturer no longer spins faster when super-charged, instead it now starts off with a gray trail effect that turns green when super-charged to serve as a better visual indicator
 -Spooky scroll pumpkin heads will now die if they are floating around you for too long without targetting an enemy
+-Harvester's scythe souls will now die if they linger around you for too long without being "activated" to target enemies
 
 
 Enemy & Boss Changes:
